Implemented initial visual display of animals

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       hm-swipeup="farm_yard_ctrl.move(0, -1)"
       hm-swipedown="farm_yard_ctrl.move(0, 1)"
     >
-      {{ position }}, {{ animal }}
+      <animal name="animal"></animal>
     </div>
 
     <script src="js/lib/angular.min.js"></script>
