--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8" />
     <meta content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0' name='viewport' />
     <title>Farm Yard</title>
+    <link href="http://fonts.googleapis.com/css?family=Shojumaru" rel="stylesheet" type="text/css">
     <link rel="stylesheet" href="css/main.css" />
 
   </head>
