--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
     </div>
 
     <script src="js/lib/angular.min.js"></script>
+    <script src="js/lib/angular-animate.min.js"></script>
     <script src="js/lib/hammer.js"></script>
     <script src="js/lib/angular.hammer.min.js"></script>
     <script src="js/lib/lodash.js"></script>
