--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
     <script src="js/lib/angular-animate.min.js"></script>
     <script src="js/lib/hammer.js"></script>
     <script src="js/lib/angular.hammer.min.js"></script>
+    <script src="js/lib/modernizr.audio.js"></script>
     <script src="js/lib/lodash.js"></script>
     <script src="js/farmyard.js"></script>
   </body>
