--- a/index.html
+++ b/index.html
@@ -3,19 +3,19 @@
   <head>
     <meta charset="utf-8" />
     <meta content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0' name='viewport' />
-    <title>Farm Yard</title>
+    <title>Menagerie</title>
     <link href="http://fonts.googleapis.com/css?family=Shojumaru" rel="stylesheet" type="text/css">
     <link rel="stylesheet" href="css/main.css" />
 
   </head>
   <body>
     <div
-      ng-app="FarmYard"
-      ng-controller="FarmYardCtrl as farm_yard_ctrl"
-      hm-swipeleft="farm_yard_ctrl.move(-1, 0)"
-      hm-swiperight="farm_yard_ctrl.move(1, 0)"
-      hm-swipeup="farm_yard_ctrl.move(0, -1)"
-      hm-swipedown="farm_yard_ctrl.move(0, 1)"
+      ng-app="Menagerie"
+      ng-controller="MenagerieCtrl as menagerie_ctrl"
+      hm-swipeleft="menagerie_ctrl.move(-1, 0)"
+      hm-swiperight="menagerie_ctrl.move(1, 0)"
+      hm-swipeup="menagerie_ctrl.move(0, -1)"
+      hm-swipedown="menagerie_ctrl.move(0, 1)"
     >
       <article
         animal="animal"
@@ -31,6 +31,6 @@
     <script src="js/lib/angular.hammer.min.js"></script>
     <script src="js/lib/modernizr.audio.js"></script>
     <script src="js/lib/lodash.js"></script>
-    <script src="js/farmyard.js"></script>
+    <script src="js/menagerie.js"></script>
   </body>
 </html>
