--- a/index.html
+++ b/index.html
@@ -22,7 +22,19 @@
       hm-swipeup="menagerie_ctrl.move(0, -1)"
       hm-swipedown="menagerie_ctrl.move(0, 1)"
     >
-      <h1 ng-hide="animals">Please wait</h1>
+      <div class="progress-circular" ng-hide="animals">
+        <div class="spinner-wrapper">
+          <div class="inner">
+            <div class="gap"></div>
+            <div class="left">
+              <div class="half-circle"></div>
+            </div>
+            <div class="right">
+              <div class="half-circle"></div>
+            </div>
+          </div>
+        </div>
+      </div>
       <article
         animal="animal"
         ng-repeat="animal in animals"
