Improved loading indictor before angular bootstraps the application

--- a/index.html
+++ b/index.html
@@ -22,15 +22,17 @@
       hm-swipeup="menagerie_ctrl.move(0, -1)"
       hm-swipedown="menagerie_ctrl.move(0, 1)"
     >
-      <div class="progress-circular" ng-hide="animals">
-        <div class="spinner-wrapper">
-          <div class="inner">
-            <div class="gap"></div>
-            <div class="left">
-              <div class="half-circle"></div>
-            </div>
-            <div class="right">
-              <div class="half-circle"></div>
+      <div class="loading">
+        <div class="progress-circular" ng-hide="animals">
+          <div class="spinner-wrapper">
+            <div class="inner">
+              <div class="gap"></div>
+              <div class="left">
+                <div class="half-circle"></div>
+              </div>
+              <div class="right">
+                <div class="half-circle"></div>
+              </div>
             </div>
           </div>
         </div>
