--- a/index.html
+++ b/index.html
@@ -4,8 +4,13 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
+
     <meta content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0" name="viewport" />
+    <meta name="mobile-web-app-capable" content="yes" />
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    
     <title>Menagerie</title>
+    
     <link href="http://fonts.googleapis.com/css?family=Shojumaru" rel="stylesheet" type="text/css">
     <link rel="stylesheet" href="{{ site.baseurl }}css/main.css" />
 
