Implemented an image preloaded

--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
   <body
     data-sounds-root="{{ site.baseurl }}sounds/"
     data-partials-root="{{ site.baseurl }}partials/"
+    data-images-root="{{ site.baseurl }}img/"
   >
     <div
       ng-app="Menagerie"
