Added initial work for help screen

--- a/index.html
+++ b/index.html
@@ -69,6 +69,12 @@
         class="container explode"
         ng-hide="is_loading"
       ></article>
+      <!--
+      <div class="help container">
+          <h1>Swipe to change animal</h1>
+          <h1>Tap animal to make its noise</h1>
+      </div>
+      -->
     </div>
 
     <script src="{{ site.baseurl }}js/lib/angular.min.js"></script>
