--- a/index.html
+++ b/index.html
@@ -69,12 +69,8 @@
         class="container explode"
         ng-hide="is_loading"
       ></article>
-      <!--
-      <div class="help container">
-          <h1>Swipe to change animal</h1>
-          <h1>Tap animal to make its noise</h1>
-      </div>
-      -->
+      <div class="help help-tap"></div>
+      <div class="help help-swipe"></div>
     </div>
 
     <script src="{{ site.baseurl }}js/lib/angular.min.js"></script>
