--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 ---
 ---
 <!doctype html>
-<html lang="en">
+<html lang="en" manifest="menagerie.appcache">
   <head>
     <meta charset="utf-8" />
 
