Removed appcache as it was more pain than it was worth

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 ---
 ---
 <!doctype html>
-<html lang="en" manifest="menagerie.appcache">
+<html lang="en">
   <head>
     <meta charset="utf-8" />
 
@@ -85,6 +85,7 @@
 
     <script src="{{ site.baseurl }}js/lib/angular.min.js"></script>
     <script src="{{ site.baseurl }}js/lib/angular-animate.min.js"></script>
+    <script src="{{ site.baseurl }}js/lib/angular-touch.min.js"></script>
     <script src="{{ site.baseurl }}js/lib/hammer.js"></script>
     <script src="{{ site.baseurl }}js/lib/angular.hammer.min.js"></script>
     <script src="{{ site.baseurl }}js/lib/modernizr.audio.js"></script>
