--- a/src/index.html
+++ b/src/index.html
@@ -11,8 +11,8 @@
     <meta name="mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-capable" content="yes">
 
-    <meta property="og:site_name" content="{{ site.title }}">
-    <meta property="og:title" content="{{ site.title }}">
+    <meta property="og:site_name" content="Menagerie">
+    <meta property="og:title" content="Menagerie">
     <meta property="og:description" content="An animal sounds game for young children">
 
     <!-- inject:css -->
