--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
     
     
 
-    <meta property="og:site_name" content="{{ site.title }}">
-    <meta property="og:title" content="{{ site.title }}">
+    <meta property="og:site_name" content="Menagerie">
+    <meta property="og:title" content="Menagerie">
     <meta property="og:description" content="An animal sounds game for young children">
 
     <!-- inject:css -->
