--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 
     <title>Menagerie</title>
 
-    <link href="http://fonts.googleapis.com/css?family=Shojumaru" rel="stylesheet" type="text/css">
+    <link href="//fonts.googleapis.com/css?family=Shojumaru" rel="stylesheet" type="text/css">
 
     <meta content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0" name="viewport">
     
